Sun Jan  6 00:02:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/autobuild.build:

          Simplified the build specification by using the target
          devenv.rebuild instead of seperate calls to devenv.clean
          and devenv.build.

Sat Jan  5 23:08:23 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/TIOA/TIOA_Generators.h:
        * MDE/GME/paradigms/PICML/be/XML/XML_Generators.h:
        * MDE/GME/paradigms/PICML/be/natural-lang/Natural_Lang_Generators.h:

          Fixed build errors on vc8 related to missing include files that
          define appropriate macros.

Sat Jan  5 22:31:58 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/BE_Condition_Parser_T.h:

          The template in the base class was missing its type
          specification. Well, this is another error that vc71 fails
          to recognize.

Sat Jan  5 21:07:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/be/BE_Deployment_Generator.cpp:

          PICML::ComponentImplementations::name was missing the address-of
          operator.

Sat Jan  5 20:04:49 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/xsl/update-messages.xsl:

          The MPC_ROOT message is allowed to stay as a warning since
          its useful information.

        * utils/Node_Daemon/Node_Daemon.mpc:

          Fixed build dependencies.

Sat Jan  5 19:46:31 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/xsl/update-messages.xsl:

          The transformations now handle warning messages.

Sat Jan  5 01:02:58 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML.reg:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICMLd.reg:
        * MDE/GME/paradigms/PICML/interpreter/ComponentConfig.h:
        * etc/config/gme_component.mpb: