@@ -1,3 +1,15 @@
+Mon Jan  7 19:28:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * tests/cuts/Boost_JUnit_Formatter.h:
+        * tests/cuts/Boost_JUnit_Formatter.cpp:
+        * tests/cuts/Port_Measurement_Test.cpp:
+        * tests/cuts/Test_Log.h:
+        * tests/cuts/Time_Measurement_Test.cpp:
+        * tests/cuts/Timestamp_Metric_Test.cpp:
+        * tests/cuts/workers/CPU_Worker_Test.cpp:
+
+          Added package information to all the unit test suites.
+
 Sun Jan  6 00:02:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * integration/autobuild.build:
